umol-models-graph/tests/mol_parsing/snapshots/compliance__mol_parsing__store_summary_snapshot@parse_mol_moleculelike_accldraw_2-methylene-13-dihydroperimidine.mol.snap
---
source: umol-models-graph/tests/mol_parsing/mod.rs
expression: summary
---
atom_count: 14
bond_count: 16
sum_formula: C12N2
graph6: MXCKGC@?K?_@O@??_
