umol-models-graph/tests/mol_parsing/snapshots/compliance__mol_parsing__store_summary_snapshot@parse_mol_moleculelike_accldraw_calcium benzoate monohydrate-18.mol.snap
---
source: umol-models-graph/tests/mol_parsing/mod.rs
expression: summary
---
atom_count: 20
bond_count: 18
sum_formula: C14CaO5
graph6: SY_Y?CA????????@_?O?G??K?A???G??G
