umol-models-graph/tests/mol_parsing/snapshots/compliance__mol_parsing__store_summary_snapshot@parse_mol_moleculelike_accldraw_perimidinylideneethanol.mol.snap
---
source: umol-models-graph/tests/mol_parsing/mod.rs
expression: summary
---
atom_count: 15
bond_count: 17
sum_formula: C12N2O
graph6: NhEGGC@_G?_@O@????W
