umol-models-graph/tests/mol_parsing/snapshots/compliance__mol_parsing__store_summary_snapshot@parse_mol_moleculelike_cdk_9554-with-exp-hyd.mol.snap
---
source: umol-models-graph/tests/mol_parsing/mod.rs
expression: summary
---
atom_count: 31
bond_count: 33
sum_formula: C11H18O2
graph6: ^hEI?C@GH??_o?_?A??_?A??G??G??C??A???O??A???C???G???C???A????O???A????G????G???
