umol-models-graph/tests/mol_parsing/snapshots/compliance__mol_parsing__store_summary_snapshot@parse_mol_moleculelike_cdk_ADN.mol.snap
---
source: umol-models-graph/tests/mol_parsing/mod.rs
expression: summary
---
atom_count: 32
bond_count: 34
sum_formula: C10H13N5O4
graph6: _hCGGC@PGC?@?A??_?G?A??C?@???G??G?GC???G??@O???_???C????G?????_???C????G????A?????O?
