umol-models-graph/tests/mol_parsing/snapshots/compliance__mol_parsing__store_summary_snapshot@parse_mol_moleculelike_cdk_ChEBI_30668.mol.snap
---
source: umol-models-graph/tests/mol_parsing/mod.rs
expression: summary
---
atom_count: 20
bond_count: 21
sum_formula: C13As2BrMoO3+1
graph6: SiCGGCP?G?_AOC??_?O?@??_??G?C???C
