umol-models-graph/tests/mol_parsing/snapshots/compliance__mol_parsing__store_summary_snapshot@parse_mol_moleculelike_cdk_azabicyclo_2.mol.snap
---
source: umol-models-graph/tests/mol_parsing/mod.rs
expression: summary
---
atom_count: 31
bond_count: 33
sum_formula: C20N2O8S
graph6: ^hCGGC@?G?_@?@??_?G?A?@???G??G??C??@??AG?O??C?????@?O?@@???G???@????C????Q?????
