umol-models-graph/tests/mol_parsing/snapshots/compliance__mol_parsing__store_summary_snapshot@parse_mol_moleculelike_cdk_azabicyclo_3.mol.snap
---
source: umol-models-graph/tests/mol_parsing/mod.rs
expression: summary
---
atom_count: 14
bond_count: 15
sum_formula: C8N2O3S
graph6: MhCGGG@AQ?_@?@?@?
